Project

General

Profile

Bug #52756

ceph-kvstore-tool repair segmentfault without bluestore-kv

Added by huang jun over 1 year ago. Updated 8 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
pacific, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

steps to reproduce:
1. create a objectstore db
mkdir /tmp/testkv
ceph-objectstore-tool --data-path /tmp/testkv --id=0 --op mkfs
2. repair it
ceph-kvstore-tool rocksdb /tmp/testkv/db repair
3. the repair cmd crashed with segmentfault


Related issues

Copied to RADOS - Backport #52892: pacific: ceph-kvstore-tool repair segmentfault without bluestore-kv New
Copied to RADOS - Backport #52893: octopus: ceph-kvstore-tool repair segmentfault without bluestore-kv New

History

#1 Updated by Kefu Chai over 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 43346

#2 Updated by huang jun over 1 year ago

huang jun wrote:

[...]

The backtrace like this:

     0> 2021-09-29 23:48:15.823 7fde469e2e80 -1 *** Caught signal (Segmentation fault) **
 in thread 7fde469e2e80 thread_name:ceph-kvstore-to

 ceph version ceph-xxx (afcb858bdddfcec792c31464b22fb2ed2878100f) mimic (dev)
 1: (()+0x193fcb) [0x5650370acfcb]
 2: (()+0xf630) [0x7fde3b700630]
 3: (StoreTool::repair()+0xa) [0x56503707957a]
 4: (main()+0x468) [0x565037059dc8]
 5: (__libc_start_main()+0xf5) [0x7fde39eb9555]
 6: (()+0x15fd77) [0x565037078d77]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

#3 Updated by huang jun over 1 year ago

more detail backtrace
(gdb) r
Starting program: /usr/src/ceph-ci/build/./bin/ceph-kvstore-tool rocksdb dev/osd0/db repair
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
[New Thread 0x7fffea97d700 (LWP 36134)]
[New Thread 0x7fffe99fb700 (LWP 36136)]

Program received signal SIGSEGV, Segmentation fault.
0x00005555556b457a in StoreTool::repair (this=this@entry=0x7fffffffd820) at /usr/src/ceph-ci/src/tools/kvstore_tool.cc:268
268       return db->repair(std::cout);
Missing separate debuginfos, use: debuginfo-install glibc-2.17-324.el7_9.x86_64 leveldb-1.12.0-5.el7.x86_64 libaio-0.3.109-13.el7.x86_64 libblkid-2.23.2-63.el7.x86_64 libgcc-4.8.5-44.el7.x86_64 libibverbs-22.4-6.el7_9.x86_64 libnl3-3.2.28-4.el7.x86_64 librdmacm-22.4-6.el7_9.x86_64 libstdc++-4.8.5-44.el7.x86_64 libunwind-1.1-3.el7.x86_64 libuuid-2.23.2-63.el7.x86_64 lz4-1.8.3-1.el7.x86_64 nspr-4.21.0-1.el7.x86_64 nss-3.44.0-7.el7_7.x86_64 nss-softokn-3.44.0-8.el7_7.x86_64 nss-softokn-freebl-3.44.0-8.el7_7.x86_64 nss-util-3.44.0-4.el7_7.x86_64 pcre-8.32-17.el7.x86_64 snappy-1.1.0-3.el7.x86_64 sqlite-3.7.17-8.el7.x86_64 zlib-1.2.7-19.el7_9.x86_64
(gdb) bt
#0  0x00005555556b457a in StoreTool::repair (this=this@entry=0x7fffffffd820) at /usr/src/ceph-ci/src/tools/kvstore_tool.cc:268
#1  0x0000555555694dc8 in main (argc=4, argv=0x7fffffffdbf8) at /usr/src/ceph-ci/src/tools/ceph_kvstore_tool.cc:97
(gdb) f 0
#0  0x00005555556b457a in StoreTool::repair (this=this@entry=0x7fffffffd820) at /usr/src/ceph-ci/src/tools/kvstore_tool.cc:268
268       return db->repair(std::cout);
(gdb) p db
$1 = std::unique_ptr<KeyValueDB> containing 0x0

#4 Updated by Neha Ojha over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to pacific, octopus

based on https://tracker.ceph.com/issues/52756#note-2, looks like the fix needs to be backported all the way.

#5 Updated by Backport Bot over 1 year ago

  • Copied to Backport #52892: pacific: ceph-kvstore-tool repair segmentfault without bluestore-kv added

#6 Updated by Backport Bot over 1 year ago

  • Copied to Backport #52893: octopus: ceph-kvstore-tool repair segmentfault without bluestore-kv added

#7 Updated by Backport Bot 8 months ago

  • Tags set to backport_processed

Also available in: Atom PDF