tools/ceph-kvstore-tool: fix segfaults when repair the rocksdb

It will not set the db handler in repair process as it's not need
to open the db, that will cause db remains 0x0, then the db->repair() will
cause the segfault.

Fixes: https://tracker.ceph.com/issues/52756

Signed-off-by: huangjun <huangjun@xsky.com>
(cherry picked from commit 28948358227d239ea3e8946601f9f54e3a790c08)